# ParaGoal

./: .gitignore  1.txt  README.md  README.zh-CN.md  admin.txt  index.html  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.js
contracts/: ParaGoalBetting.sol  README.md  hardhat.config.js  package.json
contracts/paragoal_betting/: Cargo.toml  lib.rs
contracts/paragoal_betting/src/: lib.rs
contracts/paragoal_betting/tests/: paragoal_betting.rs
contracts/scripts/: deploy.js
contracts/test/: ParaGoalBetting.test.js
docs/: acceptance-and-demo.zh-CN.md  contract-spec.zh-CN.md  copywriting.zh-CN.md  diagrams.zh-CN.md  env-setup.zh-CN.md  frontend-architecture.zh-CN.md  risks.zh-CN.md  testing-plan.zh-CN.md  timeline.zh-CN.md  user-flows.zh-CN.md
src/: main.jsx
src/app/: App.jsx
src/app/components/: Layout.jsx
src/components/: AdminFabPlaceholder.jsx  GlowCard.jsx  PitchBackground.jsx  Toast.jsx  WalletConnectPlaceholder.jsx
src/contexts/: WalletContext.jsx
src/pages/: AdminPage.jsx  HomePage.jsx  MatchPage.jsx  TestPage.jsx
src/sections/: AiCommentary.jsx  BetPanel.jsx  HomeHero.jsx  MatchStats.jsx  MatchTile.jsx  TeamCard.jsx  ValueEquation.jsx
src/services/: contractConfig.js  contractMetadata.json  contractsCompat.js  ipfsStorage.js  web3Client.js
src/shared/: builtinMatches.js
src/styles/: index.css
