[package]
name = "paragoal_betting"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["ParaGoal Team <team@paragoal.local>"]
description = "ParaGoalBetting Ink! contract for PAS betting prototype"
license = "MIT"
homepage = "https://example.com/paragoal"
repository = "https://example.com/paragoal/repo.git"
resolver = "2"

[dependencies]
ink = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []

[dev-dependencies]
ink = { version = "4.3", default-features = false, features = ["std"] }  # 移除ink-test